--- a/css/ggg.css
+++ b/css/ggg.css
@@ -1,1 +1,111 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+html,
+body {
+  height: 100%;
+}
+.box {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+ 
+}
+.box a {
+ margin: 10px;	
+ text-decoration: none; /* Убираем подчёркивание */
 
+}
+.qjke16 a{
+	 color: black;
+}
+.c {
+    display: inline-block;
+    padding: 5px 15px; /* Поля */
+    text-decoration: none; /* Убираем подчёркивание */
+    color: #fff; /* Цвет текста */
+    cursor:  	crosshair;
+    background: #4485f5;
+    border-radius: 3px;
+  }
+.b1{
+	width: 32px; height: 32px;
+  
+}
+.center{
+display: flex;
+  justify-content: center
+}
+
+input{
+	background-color: rgb(255, 255, 255);
+	
+	
+	border:1px solid #e0e0e0;
+}
+
+input.user {
+	height: 32px;
+	padding-left: 32px;
+}
+ .c3 {
+    border: 1px solid #333; /* Рамка */
+    display: inline-block;
+    padding: 5px 15px; /* Поля */
+    text-decoration: none; /* Убираем подчёркивание */
+    color: #000; /* Цвет текста */
+  }
+  form {
+  	 display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
+  }
+.qjke2{
+	align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.qjke3{
+	background: #f2f2f2;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: auto;
+
+}
+.qjke4{
+	 display: flex;
+  border-top: 1px solid #e4e4e4;
+
+}
+.qjke3 p{
+padding: 10px;
+}
+.qjke4 a{
+	padding: 10px;
+	text-decoration: none; /* Убираем подчёркивание */
+	color: black;
+}
+.push {
+    margin-left: auto;
+}
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.content{
+	 flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: auto;
+}
+.user{
+	border-radius: 15px;
+	padding: 5px;
+	margin-bottom: 25px;
+}
+.qjke{
+	margin-bottom: 30px;
+}
